bugs fixed (i hope)

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Baygroup\\Ramci\\ApiServiceProvider"
+                "Baygroup\\Ramci\\RamciServiceProvider"
             ],
             "aliases": {
                 "RAMCI": "Baygroup\\Ramci\\RamciApiFacade"
